@@ -5,11 +5,11 @@
 #else
 #define USED
 #endif
-static const char id[] USED = "@(#)make.sl	1.28 (gritter) 2/18/07";
+static const char id[] USED = "@(#)make.sl	1.29 (gritter) 2/18/07";
 /* SLIST */
 /*
 ../bsd/bsd.cc: * Sccsid @(#)bsd.cc	1.6 (gritter) 01/22/07
-../src/read.cc: * Sccsid @(#)read.cc	1.7 (gritter) 2/17/07
+../src/read.cc: * Sccsid @(#)read.cc	1.8 (gritter) 2/18/07
 ../src/dist.cc: * Sccsid @(#)dist.cc	1.5 (gritter) 01/20/07
 ../src/ar.cc: * Sccsid @(#)ar.cc	1.5 (gritter) 01/13/07
 ../src/dosys.cc: * Sccsid @(#)dosys.cc	1.4 (gritter) 01/13/07
@@ -86,5 +86,4 @@ static const char id[] USED = "@(#)make.sl	1.28 (gritter) 2/18/07";
 ../include/vroot/args.h: * Sccsid @(#)args.h	1.4 (gritter) 01/23/07
 ../include/vroot/vroot.h: * Sccsid @(#)vroot.h	1.2 (gritter) 01/07/07
 ../include/mksdmsi18n/mksdmsi18n.h: * Sccsid @(#)mksdmsi18n.h	1.2 (gritter) 01/07/07
-
 */
